# psm_utils

./: .gitignore  .readthedocs.yml  CHANGELOG.md  CONTRIBUTING.rst  README.md  README.rst  pyproject.toml
.github/workflows/: publish.yml  test.yml
docs/source/: api.rst  conf.py  index.rst  quickstart.rst
docs/source/api/: psm_utils.io.rst  psm_utils.rst
docs/source/cli/: cli.rst
example_files/: 1min_snippit_timscore.candidates.parquet  PXD053286-G1_PTMiprophet.slice.pep.xml  alphadia.precursors.tsv  example.flashlfq.tsv  fragpipe.psm.tsv
online/: README.md  _base.py  _utils.py  requirements.txt
online/pages/: 1_PSM_file_statistics.py  2_PSM_file_conversion.py
psm_utils/: __init__.py  __main__.py  _exceptions.py  peptidoform.py  psm.py  psm_list.py  utils.py
psm_utils/_io_backends/: peptideshaker.py
psm_utils/file_io/: peptideshaker.py
psm_utils/io/: __init__.py  _base_classes.py  _pd_msf_tables.py  _utils.py  alphadia.py  diann.py  exceptions.py  flashlfq.py  fragpipe.py  idxml.py  ionbot.py  maxquant.py  msamanda.py  mzid.py  parquet.py  peptide_record.py  pepxml.py  percolator.py  proteome_discoverer.py  proteoscape.py  sage.py  timscore.py  tsv.py  xtandem.py
tests/: test_peptidoform.py  test_psm.py  test_psm_list.py
tests/test_data/: ionbot.first.test.csv  peprec.csv  peprec.tsv  peprec.txt  peprec_invalid.csv  results.sage.parquet  results.sage.tsv  resultsIM.sage.tsv  test.pq  test.t.xml  test.tsv  test_alphadia.tsv  test_diann.tsv  test_fragpipe.tsv  test_in.idXML  test_msms.txt  test_out.idXML  test_out_sage.idXML  test_peaks.mzid
tests/test_io/: test___init__.py  test__base_classes.py  test_alphadia.py  test_diann.py  test_flashlfq.py  test_fragpipe.py  test_idxml.py  test_maxquant.py  test_msamanda.py  test_mzid.py  test_parquet.py  test_peptide_record.py  test_pepxml.py  test_percolator.py  test_proteoscape.py  test_sage.py  test_timscore.py  test_tsv.py  test_xtandem.py
