[project]
name = "psm-utils"
description = "Common utilities for parsing and handling peptide-spectrum matches and search engine results."
readme = "README.rst"
license = { file = "LICENSE" }
keywords = ["proteomics", "peptide", "spectrum", "identification", "parsing"]
authors = [
    { name = "Ralf Gabriels", email = "ralf@gabriels.dev" },
    { name = "Robbin Bouwmeester", email = "robbin.bouwmeester@ugent.be" },
    { name = "Arthur Declercq", email = "arthur.declercq@ugent.be" },
]
classifiers = [
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3 :: Only",
    "Topic :: Scientific/Engineering :: Bio-Informatics",
    "Development Status :: 4 - Beta",
]
dynamic = ["version"]
requires-python = ">=3.7"
dependencies = [
    "pyteomics >= 4, <4.7",
    "pyopenms",
    "lxml",
    "psims",
    "pandas",
    "numpy",
    "click",
    "rich",
    "pydantic",
    "sqlalchemy",
]

[project.optional-dependencies]
dev = ["black", "isort>5", "pytest", "pytest-cov"]
docs = [
    "sphinx",
    "numpydoc>=1,<2",
    "recommonmark",
    "sphinx-mdinclude",
    "toml",
    "semver>=2",
    "sphinx_rtd_theme",
    "sphinx-autobuild",
]
online = ["streamlit", "plotly"]

[project.urls]
GitHub = "https://github.com/compomics/psm_utils"
ReadTheDocs = "https://psm-utils.readthedocs.io"
PyPi = "https://pypi.org/project/psm-utils/"
CompOmics = "https://www.compomics.com"

[project.scripts]
psm_utils = "psm_utils.__main__:main"

[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[tool.flit.module]
name = "psm_utils"

[tool.isort]
profile = "black"

[tool.black]
line-length = 99
target-version = ['py37']

[tool.ruff]
line-length = 99
target-version = "py37"
