[project]
name = "psm-utils"
description = "Common utilities for parsing and handling peptide-spectrum matches and search engine results."
readme = "README.rst"
license = { file = "LICENSE" }
keywords = ["proteomics", "peptide", "spectrum", "identification", "parsing"]
authors = [
    { name = "Ralf Gabriels", email = "ralf@gabriels.dev" },
    { name = "Robbin Bouwmeester", email = "robbin.bouwmeester@ugent.be" },
    { name = "Arthur Declercq", email = "arthur.declercq@ugent.be" },
]
classifiers = [
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3 :: Only",
    "Topic :: Scientific/Engineering :: Bio-Informatics",
    "Development Status :: 4 - Beta",
]
dynamic = ["version"]
requires-python = ">=3.7"
dependencies = [
    "click",
    "lxml",
    "numpy < 2",  # NOTE: openms currenly doesn't support numpy 2.0, but doesn't have a version requirement
    "pandas",
    "psims",
    "pyarrow",
    "pydantic >= 2",
    "pyopenms",
    "pyteomics >= 4",
    "rich",
    "sqlalchemy",
]

[project.optional-dependencies]
dev = ["ruff", "isort>5", "pytest", "pytest-cov"]
docs = [
    "numpydoc>=1,<2",
    "recommonmark",
    "semver>=2",
    "sphinx_rtd_theme",
    "sphinx-autobuild",
    "sphinx-mdinclude",
    "sphinx",
    "toml",
]
online = ["streamlit", "plotly"]

[project.urls]
GitHub = "https://github.com/compomics/psm_utils"
ReadTheDocs = "https://psm-utils.readthedocs.io"
PyPi = "https://pypi.org/project/psm-utils/"
CompOmics = "https://www.compomics.com"

[project.scripts]
psm_utils = "psm_utils.__main__:main"

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["psm_utils*"]

[tool.setuptools.dynamic]
version = { attr = "psm_utils.__version__" }

[tool.isort]
profile = "black"

[tool.black]
line-length = 99
target-version = ['py37']

[tool.ruff]
line-length = 99
target-version = "py37"
